03-RUN/service-mesh/demo/inventory/gitops/coolstore-inventory/apps/app-coolstore-inventory/services/coolstore-inventory/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: inventory
spec:
  port:
    targetPort: web
  to:
    kind: Service
    name: inventory
    weight: 100
  wildcardPolicy: None
